add scrollspy nav on front page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
 </head>
-<body>
+<body data-spy="scroll" data-target="#side-nav">
     <nav class="nav navbar-default" role="navigation">
       <div class="container-fluid">
 
@@ -50,7 +50,7 @@
         </div>
       </div>
     </nav>
-
+    <!-- <div class="jumbotron"> -->
     <div class="container">
 
       <% if flash%>
@@ -63,8 +63,9 @@
           <% end %>
       <% end %>
 
-      <%= yield %>
-    </div>
 
+    <!-- </div> -->
+     <%= yield %>
+    </div>
   </body>
 </html>
