--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,1 +1,199 @@
-<h1>Home is where the poop happens</h1>
+
+
+
+<!-- <div id="poo-carousel" class="carousel slide" data-ride="carousel">
+
+
+
+<ol class="carousel-indicators">
+<li data-target="#poo-carousel" data-slide-to="0" class="active"></li>
+<li data-target="#poo-carousel" data-slide-to="1"></li>
+<li data-target="#poo-carousel" data-slide-to="2"></li>
+</ol>
+
+<div class="carousel-inner">
+
+<div class="item active caro">
+<img src="http://images8.alphacoders.com/389/389344.jpg">
+<div class="carousel-caption"><h1>Pie in the Sky Dreams!</h1></div>
+</div>
+<div class="item caro">
+<img src="http://www.wallsave.com/wallpapers/2560x1600/sky-cloud/2205210/sky-cloud-clouds-sun-horizon-atmosphere-2205210.jpg">
+<div class="carousel-caption"><h1>Sky High Performance!</h1></div>
+</div>
+<div class="item caro">
+<img src="http://blogthinkbig.com/wp-content/uploads/2014/01/clouds_h2.jpg">
+<div class="carousel-caption"><h1>Cloud Services!</h1></div>
+</div>
+
+</div>
+</div> -->
+
+
+
+
+  <div class="row">
+    <div class="col-sm-2">
+      <nav id="side-nav">
+        <ul class="nav nav-pills nav-stacked affix ">
+          <li>
+            <a href="#header-1">Header 1</a>
+          </li>
+          <li>
+            <a href="#header-2">Header 2</a>
+          </li>
+          <li>
+            <a href="#header-3">Header 3</a>
+          </li>
+          <li>
+            <a href="#header-4">Header 4</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+    <div class="col-sm-10 content">
+      <section id="header-1">
+        <h3>Lorem</h3>
+        <p>
+          Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
+          Nemo enim ipsam
+          <a href="#" data-toggle="tooltip" class="this-one-here" title data-original-title="Weird Word">voluptatem</a>
+          quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
+        </p>
+        <p>
+          In porttitor id urna et interdum. Nullam aliquet elit non est suscipit, et dignissim odio scelerisque. Nullam volutpat sagittis congue. Proin a lectus iaculis, laoreet arcu sed, pretium dui. Etiam molestie rhoncus erat, sit amet faucibus dolor laoreet et. Mauris id lobortis eros. Praesent id turpis vitae risus semper varius. Duis posuere diam quis euismod iaculis. Duis facilisis quam non arcu dictum, et feugiat risus rutrum. Pellentesque risus mi, condimentum sed urna in, sodales semper mi. Pellentesque bibendum orci turpis, nec tempus odio vulputate a. Phasellus sagittis, enim ut pulvinar lobortis, mauris leo feugiat nulla, a porttitor sem erat non lorem. Aliquam erat volutpat. Ut id elementum lacus. Nulla eu eleifend odio, eu viverra libero.
+        </p>
+      </section>
+      <section id="header-2">
+      <h3>Ipsum</h3>
+      <p>
+        Neque
+        <a href="#" data-toggle="tooltip" class="this-one-here" title data-original-title="Porro Porro!"> porro </a>
+        quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
+      </p>
+      <p>
+        Proin malesuada ligula sit amet bibendum egestas. Ut in gravida enim, eu tincidunt neque. Aliquam condimentum eleifend mauris non elementum. Maecenas at diam leo. Nunc euismod varius libero, vitae tempus dolor rhoncus non. Donec dignissim nunc a est cursus, eu sodales lorem fringilla. Sed sed mauris felis. Integer venenatis mauris quis risus sodales convallis. Morbi dapibus tincidunt purus nec varius.
+      </p>
+      </section>
+      <section id="header-3">
+      <h3>Sorem</h3>
+      <p>
+        Ut enim ad minima veniam,
+        <a href="#" data-toggle="tooltip" class="this-one-here"
+        title data-original-title="Quisly! Move!">quis </a>
+        nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur?
+      </p>
+      <p>
+        Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"
+      </p>
+
+      <p>
+        Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"
+      </p>
+      </section>
+
+      <section id="header-4">
+
+      <h3>Sorem</h3>
+      <p>
+        Ut enim ad minima veniam,
+        <a href="#" data-toggle="tooltip" class="this-one-here"
+        title data-original-title="Quisly! Move!">quis </a>
+        nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur?
+      </p>
+      <p>
+        Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"
+      </p>
+
+      <p>
+        Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"
+      </p>
+      </section>
+
+      <h3 id="header-5">Sorem</h3>
+      <p>
+        Ut enim ad minima veniam,
+        <a href="#" data-toggle="tooltip" class="this-one-here"
+        title data-original-title="Quisly! Move!">quis </a>
+        nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur?
+      </p>
+      <p>
+        Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"
+      </p>
+
+      <p>
+        Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"
+      </p>
+      <h3 id="header-6">Lorem</h3>
+      <p>
+        Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
+        Nemo enim ipsam
+        <a href="#" data-toggle="tooltip" class="this-one-here" title data-original-title="Weird Word">voluptatem</a>
+        quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
+      </p>
+      <p>
+        In porttitor id urna et interdum. Nullam aliquet elit non est suscipit, et dignissim odio scelerisque. Nullam volutpat sagittis congue. Proin a lectus iaculis, laoreet arcu sed, pretium dui. Etiam molestie rhoncus erat, sit amet faucibus dolor laoreet et. Mauris id lobortis eros. Praesent id turpis vitae risus semper varius. Duis posuere diam quis euismod iaculis. Duis facilisis quam non arcu dictum, et feugiat risus rutrum. Pellentesque risus mi, condimentum sed urna in, sodales semper mi. Pellentesque bibendum orci turpis, nec tempus odio vulputate a. Phasellus sagittis, enim ut pulvinar lobortis, mauris leo feugiat nulla, a porttitor sem erat non lorem. Aliquam erat volutpat. Ut id elementum lacus. Nulla eu eleifend odio, eu viverra libero.
+      </p>
+      <h3 id="header-7">Ipsum</h3>
+      <p>
+        Neque
+        <a href="#" data-toggle="tooltip" class="this-one-here" title data-original-title="Porro Porro!"> porro </a>
+        quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
+      </p>
+      <p>
+        Proin malesuada ligula sit amet bibendum egestas. Ut in gravida enim, eu tincidunt neque. Aliquam condimentum eleifend mauris non elementum. Maecenas at diam leo. Nunc euismod varius libero, vitae tempus dolor rhoncus non. Donec dignissim nunc a est cursus, eu sodales lorem fringilla. Sed sed mauris felis. Integer venenatis mauris quis risus sodales convallis. Morbi dapibus tincidunt purus nec varius.
+      </p>
+      <h3 id="header-8">Sorem</h3>
+      <p>
+        Ut enim ad minima veniam,
+        <a href="#" data-toggle="tooltip" class="this-one-here"
+        title data-original-title="Quisly! Move!">quis </a>
+        nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur?
+      </p>
+      <p>
+        Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"
+      </p>
+
+      <p>
+        Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"
+      </p>
+
+      <h3 id="header-9">Sorem</h3>
+      <p>
+        Ut enim ad minima veniam,
+        <a href="#" data-toggle="tooltip" class="this-one-here"
+        title data-original-title="Quisly! Move!">quis </a>
+        nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur?
+      </p>
+      <p>
+        Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"
+      </p>
+
+      <p>
+        Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"
+      </p>
+
+      <h3 id="header-10">Sorem</h3>
+      <p>
+        Ut enim ad minima veniam,
+        <a href="#" data-toggle="tooltip" class="this-one-here"
+        title data-original-title="Quisly! Move!">quis </a>
+        nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur?
+      </p>
+      <p>
+        Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"
+      </p>
+
+      <p>
+        Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"
+      </p>
+    </div>
+  </div>
+
+
+
+<!-- <section class="slider"> -->
+  <!-- <img src="http://i.imgur.com/fVWomWz.png"></img> -->
+
+<!-- </section> -->
+
