--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,3 +13,50 @@
  */
 
 @import "bootstrap";
+
+
+.container {
+  padding-top: 30px;
+
+}
+
+.crop {
+    width: 200px;
+    height: 200px;
+    overflow: hidden;
+}
+
+.caro {
+  width: 100%;
+  height: 500px
+}
+
+section{
+  height: 600px;
+}
+
+#side-nav ul {
+  padding: 10px;
+//  background-color: white;
+  border: thin solid white;
+  border-radius: 5px;
+  background: rgba(255, 255, 255, 0.2);
+}
+
+body {
+//overflow: hidden;
+background-image: url(http://blogthinkbig.com/wp-content/uploads/2014/01/clouds_h2.jpg);
+background-attachment: fixed;
+background-repeat: no-repeat;
+background-size: 150% auto;
+
+}
+
+.slider {
+margin-left: auto;
+margin-right: auto;
+overflow: hidden;
+//padding-top: 80%;
+width: 500px;
+max-height: 100%;
+}
