--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,1 +1,34 @@
-<h1> Mind your own business</h1>
+<div class="jumbotron">
+  <h1>Mind your own business</h1>
+  <div class="row">
+    <div class="col-sm-6">
+
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+    </div>
+
+    <div class="col-sm-6">
+      <button class="btn btn-warning btn-lg">Try our product!</button>
+    </div>
+  </div>
+</div>
+
+<div class="row text-center">
+  <h1>Meet the team:</h1>
+  <div class="col-sm-4">
+    <img class="img-circle crop" src="http://mashable.com/wp-content/uploads/2013/07/Anchorman1.gif">
+    <h2>Ron Burgundy</h2>
+    <p>Nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain, but because occasionally circumstances occur in which toil and pain can procure him some great pleasure.</p>
+  </div>
+
+  <div class="col-sm-4">
+    <img class="img-circle crop" src="http://i0.wp.com/www.dailycal.org/assets/uploads/2013/10/crying.gif">
+    <h2>Spiderman</h2>
+    <p>To take a trivial example, which of us ever undertakes laborious physical exercise, except to obtain some advantage from it?</p>
+  </div>
+
+  <div class="col-sm-4">
+    <img class="img-circle crop" src="http://mashable.com/wp-content/uploads/2013/07/Dr.-Who.gif">
+    <h2>Dr. Who</h2>
+    <p>But who has any right to find fault with a man who chooses to enjoy a pleasure that has no annoying consequences, or one who avoids a pain that produces no resultant pleasure?</p>
+  </div>
+</div>
