--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,82 +1,84 @@
-<h1>Let's Connect</h1>
+<div class="container">
+  <h1>Let's Connect</h1>
 
-<div class="row">
-  <div class="col-sm-6">
-    <form>
-      <div class="form-group">
-        <label for="contact-name">Name</label>
-        <input id="contact-name" type="text" class="form-control" placeholder="Your name">
-      </div>
+  <div class="row">
+    <div class="col-sm-6">
+      <form>
+        <div class="form-group">
+          <label for="contact-name">Name</label>
+          <input id="contact-name" type="text" class="form-control" placeholder="Your name">
+        </div>
 
-      <div class="form-group">
-        <label for="contact-email">Email</label>
-        <input id="contact-email" type="text" class="form-control" placeholder="Your email">
-      </div>
+        <div class="form-group">
+          <label for="contact-email">Email</label>
+          <input id="contact-email" type="text" class="form-control" placeholder="Your email">
+        </div>
 
-      <div class="form-group">
-        <label for="contact-phone">Phone</label>
-        <input id="contact-phone" type="text" class="form-control" placeholder="Your phone">
-      </div>
+        <div class="form-group">
+          <label for="contact-phone">Phone</label>
+          <input id="contact-phone" type="text" class="form-control" placeholder="Your phone">
+        </div>
 
-      <div class="form-group">
-        <label for="contact-body">Message</label>
-        <textarea id="contact-body" class="form-control" placeholder="What do you want to know?"></textarea>
-      </div>
+        <div class="form-group">
+          <label for="contact-body">Message</label>
+          <textarea id="contact-body" class="form-control" placeholder="What do you want to know?"></textarea>
+        </div>
 
-      <button type="button" class="btn btn-primary" id="contact-submit">Submit</button>
-    </form>
-  </div>
+        <button type="button" class="btn btn-primary" id="contact-submit">Submit</button>
+      </form>
+    </div>
 
-  <div class="col-sm-6">
-    <table class="table table-striped">
-      <tr>
-        <th>
-          Staff Member
-        </th>
-        <th>
-          Phone Number
-        </th>
-      </tr>
-      <tr>
-        <td>
-          Brent Smith
-        </td>
-        <td>
-          (XXX) XXX-XXXX
-        </td>
-      </tr>
-      <tr>
-        <td>
-          Andrew Richards
-        </td>
-        <td>
-          (XXX) XXX-XXXX
-        </td>
-      </tr>
-      <tr>
-        <td>
-          Shah Paracha
-        </td>
-        <td>
-          (XXX) XXX-XXXX
-        </td>
-      </tr>
-      <tr>
-        <td>
-          CJ Avilla
-        </td>
-        <td>
-          (XXX) XXX-XXXX
-        </td>
-      </tr>
-      <!-- <tr>
-        <td>
-          Ty Brooks
-        </td>
-        <td>
-          (XXX) XXX-XXXX
-        </td>
-      </tr> -->
-    </table>
+    <div class="col-sm-6">
+      <table class="table table-striped">
+        <tr>
+          <th>
+            Staff Member
+          </th>
+          <th>
+            Phone Number
+          </th>
+        </tr>
+        <tr>
+          <td>
+            Brent Smith
+          </td>
+          <td>
+            (XXX) XXX-XXXX
+          </td>
+        </tr>
+        <tr>
+          <td>
+            Andrew Richards
+          </td>
+          <td>
+            (XXX) XXX-XXXX
+          </td>
+        </tr>
+        <tr>
+          <td>
+            Shah Paracha
+          </td>
+          <td>
+            (XXX) XXX-XXXX
+          </td>
+        </tr>
+        <tr>
+          <td>
+            CJ Avilla
+          </td>
+          <td>
+            (XXX) XXX-XXXX
+          </td>
+        </tr>
+        <!-- <tr>
+          <td>
+            Ty Brooks
+          </td>
+          <td>
+            (XXX) XXX-XXXX
+          </td>
+        </tr> -->
+      </table>
+    </div>
   </div>
 </div>
