stopping point for the day

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -192,8 +192,8 @@
 
 
 
-<!-- <section class="slider"> -->
+<section class="slider">
   <!-- <img src="http://i.imgur.com/fVWomWz.png"></img> -->
 
-<!-- </section> -->
+</section>
 
